[package]
name = "rio_api"
version = "0.4.2"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["RDF", "parser"]
repository = "https://github.com/oxigraph/rio"
description = """
Common data structures for RDF formats parsers and serializers
"""
edition = "2018"

[features]
default = []
generalized = []