[package]
name = "rio_api"
version = "0.5.0"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["RDF", "parser"]
repository = "https://github.com/oxigraph/rio"
description = """
Common data structures for RDF formats parsers and serializers
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
generalized = []
sophia = ["sophia_api"]

[dependencies]
sophia_api = { version = "0.6.1", optional = true }
