[package]
name = "rio_api"
version = "0.7.0"
authors = ["Tpt <thomas@pellissier-tanon.fr>", "Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["RDF", "parser"]
repository = "https://github.com/oxigraph/rio"
description = """
Common data structures for RDF formats parsers and serializers
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
generalized = []
