[package]
name = "rio_testsuite"
version = "0.8.0"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/oxigraph/rio"
description = """
W3C testsuite evaluator for Rio parsers
"""
edition = "2021"
rust-version = "1.58"
publish = false

[dependencies]
rio_api = { version = "0.8", path="../api" }
rio_turtle = { version = "0.8", path="../turtle" }
rio_xml = { version = "0.8", path="../xml" }
oxiri = "0.2"
permutohedron = "0.2"

[dev-dependencies]
criterion = "0.4"

[features]
default = []
generalized = ["rio_api/generalized", "rio_turtle/generalized"]

[[bench]]
name = "w3c_testsuite"
harness = false
