[package]
name = "rio_turtle"
version = "0.6.2"
authors = ["Tpt <thomas@pellissier-tanon.fr>", "Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["RDF", "Turtle", "TriG", "N-Triples", "N-Quads"]
repository = "https://github.com/oxigraph/rio"
description = """
RDF Turtle, Trig, N-Triples and N-Quads parsers and serializers
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
generalized = ["rio_api/generalized"]
sophia = ["rio_api/sophia", "sophia_api"]

[dependencies]
oxilangtag = "0.1"
oxiri = ">=0.1,<0.3"
rio_api = { version = "0.6", path="../api" }
sophia_api = { version = ">=0.6, <=0.8", optional = true }

[dev-dependencies]
sophia_api = { version = ">=0.6, <=0.8", features = ["test_macro"] }

