[package]
name = "rio_turtle"
version = "0.8.4"
authors = ["Tpt <thomas@pellissier-tanon.fr>", "Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["RDF", "Turtle", "TriG", "N-Triples", "N-Quads"]
repository = "https://github.com/oxigraph/rio"
description = """
RDF Turtle, Trig, N-Triples and N-Quads parsers and serializers
"""
edition = "2021"
rust-version = "1.63"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
generalized = ["rio_api/generalized"]

[dependencies]
oxilangtag = "0.1"
oxiri = "0.2"
rio_api = { version = "0.8", path="../api" }
