[package]
name = "rio_xml"
version = "0.8.5"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["RDF", "XML", "parser"]
repository = "https://github.com/oxigraph/rio"
description = """
RDF/XML parser and serializer
"""
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
oxilangtag = "0.1"
oxiri = "0.2"
rio_api = { version = "0.8", path = "../api" }
quick-xml = "0.36"
